--- a/css/index.css
+++ b/css/index.css
@@ -2,14 +2,23 @@
   padding: 0;
   margin: 0;
 }
+/* body,
+html {
+  width: 100%;
+  height: 100%;
+} */
 body {
   background: #515151;
 }
 #mine {
-  margin: 50px auto;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
 }
 .level {
   text-align: center;
+  padding-top: 50px;
 }
 .level button {
   padding: 5px 15px;
@@ -46,7 +55,7 @@ table td {
   font-weight: bold;
 }
 .info {
-  margin-top: 20px;
+  padding: 20px 0;
   text-align: center;
   color: #fff;
 }
@@ -107,4 +116,106 @@ table td.boom-mine {
   background: #ff0000 url('../img/mine.png') no-repeat center;
   background-size: cover;
   border-color: #ff0000;
+}
+
+.mask {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  z-index: -1;
+}
+
+.mask > .info {
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 200px;
+  height: 100px;
+  background: #fff;
+  border-radius: 10px;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.mask > .info h1 {
+  font-size: 20px;
+  margin: 20px 0 10px 0;
+  color: #424242;
+  user-select: none;
+}
+.mask > .info button {
+  padding: 5px 10px;
+  background: #85cde9;
+  border: none;
+  font-size: 16px;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+@keyframes show-info {
+  0% {
+    transform: translateX(-50%) scale(1);
+    -webkit-transform: translateX(-50%) scale(1);
+    -moz-transform: translateX(-50%) scale(1);
+    -ms-transform: translateX(-50%) scale(1);
+    -o-transform: translateX(-50%) scale(1);
+  }
+  40% {
+    transform: translateX(-50%) scale(1.5);
+    -webkit-transform: translateX(-50%) scale(1.5);
+    -moz-transform: translateX(-50%) scale(1.5);
+    -ms-transform: translateX(-50%) scale(1.5);
+    -o-transform: translateX(-50%) scale(1.5);
+  }
+  100% {
+    transform: translateX(-50%) scale(1);
+    -webkit-transform: translateX(-50%) scale(1);
+    -moz-transform: translateX(-50%) scale(1);
+    -ms-transform: translateX(-50%) scale(1);
+    -o-transform: translateX(-50%) scale(1);
+  }
+}
+@keyframes hide-info {
+  0% {
+    transform: translateX(-50%) scale(1);
+    -webkit-transform: translateX(-50%) scale(1);
+    -moz-transform: translateX(-50%) scale(1);
+    -ms-transform: translateX(-50%) scale(1);
+    -o-transform: translateX(-50%) scale(1);
+  }
+  40% {
+    transform: translateX(-50%) scale(5);
+    -webkit-transform: translateX(-50%) scale(5);
+    -moz-transform: translateX(-50%) scale(5);
+    -ms-transform: translateX(-50%) scale(5);
+    -o-transform: translateX(-50%) scale(5);
+  }
+  100% {
+    transform: translateX(-50%) scale(0);
+    -webkit-transform: translateX(-50%) scale(0);
+    -moz-transform: translateX(-50%) scale(0);
+    -ms-transform: translateX(-50%) scale(0);
+    -o-transform: translateX(-50%) scale(0);
+  }
 }
